# parsing-a-set-using-lex-flex

./: .gitignore  CMakeLists.txt  Makefile  README.md  calc.l  runMe.sh  runUnitTest.sh
include/: calc.h
scripts/: definePath.sh  runUnitTest.sh
src/: CMakeLists.txt  calc.l
test/: negative_test_set.txt  positive_test_set.txt  test_double.txt
